# Wireframe-Editor

./: .env.cmake  CMakeLists.txt
include/: WireframeEngineEditor.hpp
include/Base/: Window.hpp
include/Config/: EditorColors.hpp
include/GUI/: GUIPipeline.hpp  GUIRenderInfo.hpp  Window.hpp
include/IO/: Cursor.hpp
include/ImGui/: ImGuiContext.hpp  ImGuiPipeline.hpp
include/Linking/: FunctionPtrs.hpp
include/MainWindow/: MainWindow.hpp  WindowsMainWindow.hpp
include/Vulkan/: Device.hpp  ImGuiPipeline.hpp  SwapChain.hpp  VulkanInclude.hpp  VulkanUtils.hpp
include/Windows/: EditorPropertiesWindow.hpp
info/: ProjectInfo.hpp  ProjectInfo.hpp.in
src/Base/: Window.cpp  Windows.cpp
src/Config/: EditorColors.cpp
src/EditorPlatform/: PlatformLinux.cpp
src/Examples/: ExampleDemoWindow.cpp  ExampleDemoWindow.hpp
src/GUI/: GUIPipeline.cpp  GUIRenderInfo.cpp  Window.cpp
src/General/: Application.cpp  ImGui.cpp
src/IO/: Cursor.cpp
src/ImGui/: ImGuiContext.cpp  ImGuiPipeline.cpp
src/Linking/: FunctionPtrs.cpp
src/MainWindow/: LinuxMainWindow.cpp  LinuxToImGui.cpp  LinuxToImGui.hpp  Win32ToImGui.cpp  Win32ToImGui.hpp  WindowsMainWindow.cpp
src/Platform/: PlatformLinux.cpp
src/Platform/Windows/: PlatformWindows.cpp
src/Shaders/: FragShader.frag  FragShader.frag.u32  VertShader.vert  VertShader.vert.u32
src/Vulkan/: Device.cpp  ImGuiPipeline.cpp  SwapChain.cpp  VulkanUtils.cpp
src/Windows/: EditorPropertiesWindow.cpp  NewProjectWindow.cpp
wrapper/: Wrapper.cpp
